192.168.1.129/kompose/k8s/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: adminer.192.168.1.129.nip.io
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: adminer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.service.expose: adminer.192.168.1.129.nip.io
        kompose.service.expose.ingress-class-name: nginx
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: adminer
    spec:
      containers:
        - image: adminer
          name: adminer
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
