192.168.1.129/kompose/k8s/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: jenkins.192.168.1.129.nip.io
    kompose.service.expose.ingress-class-name: nginx
    kompose.serviceaccount-name: jenkins
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 1Gi
    kompose.volume.storage-class-name: standard
    kompose.volume.type: persistentVolumeClaim
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.service.expose: jenkins.192.168.1.129.nip.io
        kompose.service.expose.ingress-class-name: nginx
        kompose.serviceaccount-name: jenkins
        kompose.version: 1.31.2 (HEAD)
        kompose.volume.size: 1Gi
        kompose.volume.storage-class-name: standard
        kompose.volume.type: persistentVolumeClaim
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: jenkins
    spec:
      containers:
        - env:
            - name: TZ
              value: Asia/Seoul
          image: jenkins/jenkins
          name: jenkins
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 50000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jk-home
      restartPolicy: Always
      serviceAccountName: jenkins
      volumes:
        - name: jk-home
          persistentVolumeClaim:
            claimName: jk-home
status: {}
