192.168.1.129/kompose/k8s/adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: adminer.192.168.1.129.nip.io
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  ingressClassName: nginx
  rules:
    - host: adminer.192.168.1.129.nip.io
      http:
        paths:
          - backend:
              service:
                name: adminer
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
